new jsp files, add goal done, add shelf done, display info done, updated create user

--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -39,7 +39,7 @@
                                               <button class="btn btn-dark btn-lg btn-block" type="submit" id="loginBtn" onClick="validateLogin()">Log In</button>
                                             </div>
                           
-                                            <a class="small" href="forgotpass.html" id="forgotPassLink">Forgot your password?</a>
+                                            <a class="small" href="resetpassword.jsp" id="forgotPassLink">Forgot your password?</a>
                                             <p class="mb-5 pb-lg-2">Don't have an account? <a id="createAccLink" href="register.html">Create An Account</a></p>
                                           </form>
 
