--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -61,6 +61,18 @@
                                                     <label class="form-label" for="securityAnswer">Security question answer</label>
                                                     <div class="invalid-feedback" style="display: inline;"></div>
                                                 </div>
+                                                <div class="form-outline mb-4">
+                                                    <input type="text" id="newBio" name="newBio" class="form-control"/>
+                                                    <label class="form-label" for="newBio">Add a bio</label>
+                                                </div>
+                                                <div class="form-outline mb-4">
+                                                    <input type="text" id="newFavBook" name="newFavBook" class="form-control"/>
+                                                    <label class="form-label" for="newFavBook">What's your favorite book?</label>
+                                                </div>
+                                                <div class="form-outline mb-4">
+                                                    <input type="text" id="newFavAuthor" name="newFavAuthor" class="form-control"/>
+                                                    <label class="form-label" for="newFavAuthor">Who's your favorite author?</label>
+                                                </div>
                                                 <div id="errorMessage" style="color: #732222;"></div>
                                             </div>
                                             <div class="pt-1">
