--- a/src/main/webapp/stats.html
+++ b/src/main/webapp/stats.html
@@ -39,14 +39,14 @@
                             <a class="nav-link" href="stats.html">Stats</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="mygoals.html">My Goals</a>
+                            <a class="nav-link" href="addgoal.jsp">My Goals</a>
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link" href="myshelves.html">My Shelves</a>
+                            <a class="nav-link" href="myshelves.jsp">My Shelves</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="myaccount.html">My Account</a>
+                            <a class="nav-link" href="myaccount.jsp">My Account</a>
                         </li>
                     </ul>
                     <form class="d-flex">
