--- a/src/main/webapp/homepage.html
+++ b/src/main/webapp/homepage.html
@@ -30,7 +30,7 @@
                             <a class="nav-link" href="stats.html">Stats</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="addgoal.jsp">My Goals</a>
+                            <a class="nav-link" href="mygoals.jsp">My Goals</a>
                         </li>
 
                         <li class="nav-item">
