--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -48,7 +48,7 @@
                                                     <label class="form-label" for="retypePassword">Re-enter password</label>
                                                     <div class="invalid-feedback" style="display: inline;"></div>
                                                 </div>
-                                                <div id="matchPassMessage" style="color: #732222;"></div>
+                                                <div id="matchPassMessage" style="color: #744845;"></div>
                                             </div>
                                             <div class="col-lg-6 col-md-4">
                                                 <div class="form-outline mb-4">
@@ -73,7 +73,7 @@
                                                     <input type="text" id="newFavAuthor" name="newFavAuthor" class="form-control"/>
                                                     <label class="form-label" for="newFavAuthor">Who's your favorite author?</label>
                                                 </div>
-                                                <div id="errorMessage" style="color: #732222;"></div>
+                                                <div id="errorMessage" style="color: #744845; font-weight: bold;"></div>
                                             </div>
                                             <div class="pt-1">
                                               <button class="btn btn-dark btn-lg btn-block" type="submit" id="registerBtn" onclick="validateRegistration()">Create Account</button>
