--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -19,7 +19,7 @@
                         <div class="card" style="border-radius: 1rem;">
                             <div class="row g-0">
                                 <div class="col-lg-4 d-none d-lg-block">
-                                    <img src="./images/cat.jpg" alt="bookshelf" class="img-fluid" style="border-radius: 1rem;" />
+                                    <img src="./images/bookpile.jpg" alt="bookshelf" class="img-fluid" style="border-radius: 1rem;" />
                                 </div>
                                 <div class="col-md-7 col-lg-8 d-flex align-items-center">
                                     <div class="card-body p-4 text-black">
@@ -49,6 +49,9 @@
                                                     <div class="invalid-feedback" style="display: inline;"></div>
                                                 </div>
                                                 <div id="matchPassMessage" style="color: #744845;"></div>
+                                                <div class="pt-1">
+	                                              <button class="btn btn-dark btn-lg btn-block" type="submit" id="registerBtn" onclick="validateRegistration()">Create Account</button>
+	                                            </div>
                                             </div>
                                             <div class="col-lg-6 col-md-4">
                                                 <div class="form-outline mb-4">
@@ -74,9 +77,6 @@
                                                     <label class="form-label" for="newFavAuthor">Who's your favorite author?</label>
                                                 </div>
                                                 <div id="errorMessage" style="color: #744845; font-weight: bold;"></div>
-                                            </div>
-                                            <div class="pt-1">
-                                              <button class="btn btn-dark btn-lg btn-block" type="submit" id="registerBtn" onclick="validateRegistration()">Create Account</button>
                                             </div>
                                         </form>
 
